[FIX] getAllArchives return changed